fix: contrasts and hovers

--- a/src/components/multiple-step-form/style.scss
+++ b/src/components/multiple-step-form/style.scss
@@ -128,6 +128,29 @@
     max-width: 100% !important;
   }
 
+  button {
+    background-color: transparent !important;
+    border: 1px solid var(--ast-border-color) !important;
+    transition: border 0.2s;
+
+    &:hover,
+    &:focus,
+    &[data-highlighted] {
+      background-color: transparent !important;
+      border: 1px solid var(--ast-global-color-0) !important;
+    }
+  }
+
+  .previous-button,
+  .next-button {
+    &:hover,
+    &:focus,
+    &[data-highlighted] {
+      background-color: var(--ast-global-color-0) !important;
+      border: 1px solid var(--ast-global-color-0) !important;
+    }
+  }
+
   .step-indicator {
     margin-bottom: 2rem;
 
@@ -227,8 +250,6 @@
     select,
     textarea,
     button[role="combobox"] {
-      max-width: 100%;
-      box-sizing: border-box;
       margin-top: 0.5rem;
     }
 
@@ -258,13 +279,16 @@
       flex-wrap: wrap;
     }
 
+    input {
+      color: var(--e-global-color-text, black) !important;
+    }
+
     button[role="radio"],
     button[role="checkbox"] {
       all: unset;
       height: 0.5rem;
       width: 0.5rem !important;
       border-radius: 100%;
-      border: 1px solid hsl(var(--input));
       cursor: pointer;
       display: inline-flex;
       align-items: center;
@@ -273,9 +297,12 @@
       transition: all 0.2s;
       padding: 10px !important;
       margin-top: -0.5rem !important;
+      background-color: transparent !important;
+      border-color: var(--ast-border-color) !important;
 
       &:hover {
-        border-color: hsl(var(--ring));
+        border: 1px solid var(--ast-global-color-0) !important;
+        background-color: var(--ast-global-color-0) !important;
       }
 
       &:focus-visible {
@@ -284,14 +311,11 @@
       }
 
       &[data-state="checked"] {
-        border-color: hsl(var(--primary));
-        background-color: hsl(var(--primary));
-
         span {
           display: flex;
           align-items: center;
           justify-content: center;
-          color: hsl(var(--primary-foreground));
+          color: var(--primary) !important;
         }
       }
 
@@ -341,14 +365,6 @@
     outline: none !important;
     display: flex !important;
     align-items: center !important;
-
-    &:hover,
-    &:focus,
-    &[data-highlighted],
-    &[data-state="checked"] {
-      background: hsl(var(--accent)) !important;
-      color: hsl(var(--accent-foreground)) !important;
-    }
 
     &[data-disabled] {
       opacity: 0.5 !important;
